<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtherTransportationActivity">

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/blocker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
        tools:layout_editor_absoluteY="75dp" />

    <TableLayout
        android:id="@+id/timeTable"
        android:layout_width="409dp"
        android:layout_height="646dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blocker"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/walkingImage"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Walking"
                tools:srcCompat="@drawable/walking" />

            <TextView
                android:id="@+id/walking"
                android:layout_width="203dp"
                android:layout_height="30dp"
                android:text="@string/Walking"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/walkingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0057"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/boostedImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Walking"
                tools:srcCompat="@drawable/boosted" />

            <TextView
                android:id="@+id/boosted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Boosted_Mini_S_Board"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/boostedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0057"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/evolveImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Walking"
                tools:srcCompat="@drawable/evolve" />

            <TextView
                android:id="@+id/Evolve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Evolve_Bamboo_GTR_2in1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/evolveTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0057"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/oneWheelImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/OneWheel_XR"
                tools:srcCompat="@drawable/onewheel" />

            <TextView
                android:id="@+id/OneWheel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OneWheel_XR"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/oneWheelTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0057"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/motoTecImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Walking"
                tools:srcCompat="@drawable/mototec" />

            <TextView
                android:id="@+id/MotoTec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MotoTec_Skateboard"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/motoTecTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0057"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/segwayImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Walking"
                tools:srcCompat="@drawable/segway" />

            <TextView
                android:id="@+id/Segway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Segway_Ninebot_S"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/segwayTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0057"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/segwayPlusImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Walking"
                tools:srcCompat="@drawable/segwayplus" />

            <TextView
                android:id="@+id/SegwayPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Segway_Ninebot_S_PLUS"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/segwayPlusTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0057"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/razorImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Walking"
                tools:srcCompat="@drawable/razor" />

            <TextView
                android:id="@+id/Razor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Razor_Scooter"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/razorTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0057"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/geoBladeImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Walking"
                tools:srcCompat="@drawable/geoblade" />

            <TextView
                android:id="@+id/GeoBlade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GeoBlade_500"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/geoBladeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0057"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/hoverTraxImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/Walking"
                tools:srcCompat="@drawable/hovertrax" />

            <TextView
                android:id="@+id/Hovertrax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hovertrax_Hoverboard"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/hovertraxTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0057"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>